samples/_failures_safe/1761245936_9449f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef8d8e3f.c: In function ‘main’:
./samples/SAFE/__tmp_ef8d8e3f.c:165:5: error: expected declaration or statement at end of input
  165 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_ef8d8e3f.c:165:5: error: expected declaration or statement at end of input
